--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -236,14 +236,14 @@ display: inline-flex;
 #contactme-container {
   display: block;
   position: relative;
-  margin-left: 25vh;
-  margin-right: 25vh;
+  margin: 25vh;
 }
 
 #contactme-title {
   position: relative;
   color: white;
   font-size: 50px;
+  padding-bottom: 20px;
   font-family: 'JetBrains Mono', monospace;
   z-index: 3;
 }
@@ -253,18 +253,14 @@ display: inline-flex;
   font-size: 20px;
   font-family: 'JetBrains Mono', monospace;
   list-style: none;
-  padding-left: 4px;
-  padding-bottom: 100px;
+  padding: 50px;
   z-index: 3;
+  width: 100vw;
   display: flex;
-  position: relative;
-  justify-content: space-between;
+  position: fixed;
+  bottom: 0px;
+  justify-content: space-around;
   align-items: center;
-  width: 100%;
-}
-
-.contact-link {
-  cursor: pointer;
 }
 
 .contact-link:hover {
@@ -273,16 +269,25 @@ display: inline-flex;
 }
 
 .navigator {
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 100vh;
-    width: 400px;
-    background-color: #333;
-    color: #fff;
-    transform: translateX(100%);
-    transition: transform 0.3s ease-in-out;
-    z-index: 5;
+  transition: transform 0.3s ease-in-out;
+}
+
+.navigator.open {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 400px;
+  background-color: #333;
+  color: #fff;
+  transform: translateX(0);
+  transition: transform 0.3s ease-in-out;
+  z-index: 5;
+}
+
+.navigator.closed {
+  display: none;
+  transition: transform 0.3s ease-in-out;
 }
   
   .navigator ul {
@@ -370,39 +375,6 @@ display: inline-flex;
   transform: translate3d(0, 260%, 0);
     opacity: 1;
 }
-
-#downarrow {
-  border: solid white;
-  border-radius: 5px;
-  border-width: 0 6px 6px 0;
-  display: inline-block;
-  padding: 20px;
-  position: fixed;
-  right: 60px;
-  bottom: 30px;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  opacity: 1;
-  transition: opacity 0.5s ease-in-out;
-  z-index: 6;
-}
-
-#downarrow.hidden {
-  border: solid white;
-  border-radius: 5px;
-  border-width: 0 6px 6px 0;
-  display: inline-block;
-  padding: 20px;
-  position: fixed;
-  right: 60px;
-  bottom: 30px;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  opacity: 0;
-  z-index: 6;
-}
-
-
 
 
   .icon {
@@ -625,4 +597,53 @@ display: inline-flex;
   right: 100px;
   top: 50px;
   z-index: 3;
+}
+
+#FirstNameHeader {
+  position: fixed;
+  font-family: 'Ms Madi', cursive;
+  font-size: 75px;
+  color: white;
+  left: 100px;
+  top: 50px;
+  z-index: 3;
+}
+
+#LastNameHeader {
+  position: fixed;
+  font-family: 'JetBrains Mono', monospace;
+  font-size: 70px;
+  color: white;
+  left: 290px;
+  top: 46px;
+  z-index: 3;
+}
+
+.inputcontainer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction:column;
+  margin-left: 5px;
+}
+
+.input {
+  padding: 5px 140px 5px 10px;
+  font-family: 'JetBrains Mono', monospace;
+  font-weight: bold;
+  margin: 10px;
+}
+
+.messageInput {
+  padding: 5px 140px 40px 10px;
+  font-family: 'JetBrains Mono', monospace;
+  font-weight: bold;
+  margin: 10px;
+}
+
+#messagesubmitbtn {
+  padding: 5px 140px 5px 10px;
+  font-family: 'JetBrains Mono', monospace;
+  font-weight: bold;
+  margin: 10px;
 }
